--- a/Society/Login&SignUp/Base.lproj/Main.storyboard
+++ b/Society/Login&SignUp/Base.lproj/Main.storyboard
@@ -184,8 +184,8 @@
                                     <action selector="submitSigningUp:" destination="M6O-GG-DQ5" eventType="touchUpInside" id="ktn-3a-tCF"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nrc-1t-XNm">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="157"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.slash" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="nrc-1t-XNm">
+                                <rect key="frame" x="0.0" y="2.5" width="414" height="152.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="157" id="WeN-zb-IWo"/>
                                 </constraints>
@@ -217,4 +217,7 @@
             <point key="canvasLocation" x="1367" y="157"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pencil.slash" catalog="system" width="64" height="56"/>
+    </resources>
 </document>
